# DSC650

./: .gitignore  404.html  README.md  course.yml  environment.yaml  generate_requirements.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
.github/workflows/: ci.yml
data/: index.html
data/baby-names/names_classifier/: .part-00000-5eb32e4b-dc40-4002-8fc0-581dba1df650-c000.snappy.parquet.crc  .part-00001-5eb32e4b-dc40-4002-8fc0-581dba1df650-c000.snappy.parquet.crc  .part-00002-5eb32e4b-dc40-4002-8fc0-581dba1df650-c000.snappy.parquet.crc  .part-00003-5eb32e4b-dc40-4002-8fc0-581dba1df650-c000.snappy.parquet.crc  .part-00004-5eb32e4b-dc40-4002-8fc0-581dba1df650-c000.snappy.parquet.crc  .part-00005-5eb32e4b-dc40-4002-8fc0-581dba1df650-c000.snappy.parquet.crc  (+68 more)
data/baby-names/streaming/: names_00.csv  names_01.csv  (+96 more)
data/docs/: fastest-computers.csv  units-binary.csv  units.csv
data/jester/: jokes.md  readme.md
docs/: index.md
docs/data/: index.md
docs/faq/: neural-networks.md
docs/setup/: hosted.md  index.md  macOS.md  ubuntu.md  windows.md
dsc650/: __main__.py  commands.py  settings.py
dsc650/assignments/: Package Assignments.ipynb
examples/: README.md  mnist_mlp.py
faq/neural-networks/: index.html
lessons/: index.html
lessons/10-week/: index.html
lessons/12-week/: index.html
search/: search_index.json
setup/: index.html
setup/hosted/: index.html
setup/macOS/: index.html
setup/ubuntu/: index.html
setup/windows/: index.html
syllabus/10 Week/: DSC 650 Syllabus Part II.md
tests/: test_version.py
(+115 files in other folders)
